--- a/index.njk
+++ b/index.njk
@@ -4,38 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no, email=no, address=no">
-    <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ pjt.setting.name }}
       - Debug</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/musubii@7.0.0-alpha.42/docs/css/musubii.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shitajicss@5.0.0/docs/css/shitaji.css">
     <style>
+      body {
+        min-height: 100vh;
+        padding: 160px 0;
+      }
       .header {
-        margin-bottom: 160px;
+        margin-bottom: 64px;
       }
       .demo-h1 {
-        margin: 160px 16px 32px;
-        font-size: 32px;
+        margin: 0 16px 32px;
+        font-size: 2em;
         font-weight: 700;
       }
       .demo-version {
-        font-size: 16px;
         font-weight: 400;
       }
+      .demo-link {
+        cursor: pointer;
+        font-weight: 400;
+        text-decoration: underline;
+      }
+      .demo-link:hover {
+        text-decoration: none;
+      }
       .demo-h2 {
-        margin: 160px 16px 32px;
-        font-size: 20px;
-        font-weight: 700;
-      }
-      .demo-h3 {
-        margin: 20px 16px 8px;
-        color: #828282;
-        font-size: 14px;
-        font-weight: 700;
-      }
-      .demo-h4 {
-        color: #828282;
-        font-size: 12px;
+        margin: 64px 16px 32px;
+        font-size: 1.25em;
         font-weight: 700;
       }
       .demo-area {
@@ -47,15 +46,42 @@
     <header class="header">
       <h1 class="demo-h1">
         <span>{{ pjt.setting.name }}</span>
-        <span class="demo-version">v{{ pkg.version }}</span>
       </h1>
+      <div class="demo-area">
+        <p>
+          <span class="demo-version">v{{ pkg.version }}</span>
+          <a href="{{ pkg.repository }}" class="demo-link">Repository</a>
+        </p>
+      </div>
     </header>
     <main class="main">
       <h2 class="demo-h2">Example</h2>
       <div class="demo-area">
-        <button type="button" class="button is-plain is-primary">View staff roll</button>
+        <p>
+          <span class="demo-link" data-staffroller-show="staffroller-modal">Staff</span>
+        </p>
       </div>
     </main>
     <script src="./{{ pkg.name }}.js"></script>
+    <script>
+      const staffroller = new Staffroller({
+        id: "staffroller-modal",
+        title: "STAFF",
+        data: [
+          {
+            "role": "デザイナー",
+            "name": ["クラク", "まいのこ"]
+          }, {
+            "role": [
+              "コーダー", "フロントエンド"
+            ],
+            "name": "クラク"
+          }, {
+            "role": "スペシャルサンクス",
+            "name": "マロ"
+          }
+        ]
+      })
+    </script>
   </body>
 </html>
