--- a/index.njk
+++ b/index.njk
@@ -8,6 +8,7 @@
     <title>{{ pjt.setting.name }}
       - Debug</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shitajicss@5.0.0/docs/css/shitaji.css">
+    <link rel="stylesheet" href="./{{ pkg.name }}.css">
     <style>
       body {
         min-height: 100vh;
