Changing the data structure #4

--- a/src/demo/index.njk
+++ b/src/demo/index.njk
@@ -71,15 +71,29 @@
         data: [
           {
             "role": "デザイナー",
-            "name": ["クラク", "まいのこ"]
+            "members": [
+              {
+                "name": "クラク"
+              }, {
+                "name": "まいのこ"
+              }
+            ]
           }, {
             "role": [
               "コーダー", "フロントエンド"
             ],
-            "name": "クラク"
+            "members": [
+              {
+                "name": "クラク"
+              }
+            ]
           }, {
             "role": "スペシャルサンクス",
-            "name": "マロ"
+            "members": [
+              {
+                "name": "マロ"
+              }
+            ]
           }
         ]
       })
